--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-index.html 32423452@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+</head>
+<body>
+  <header>
+    <h1>Hello World!</h1>
+  </header>
+</body>
+</html>
